	* il.h: Changed definition of IL_ALPHA to match OpenGL's GL_ALPHA.
	* src-IL/include/Makefile.am: Added il_exr.h.
	* il_dds.c/il.h: Readded DXT extension code.
	* il_internal.h: Added declaration of ilFixCur.

2009-01-20 Denton woods <doomwiz@users.sf.net>
	* ilut_opengl.c (ilutGLScreen): Added glPixelStorei call.
	* Added il_iff.c from GAIA.
	* Added "x64 DLL Install.exe" to SVN.
	* il_internal.h: Renamed ilIsValidJpg* functions to ilIsValidJpeg*.  Added Iff functions.
	* il_io.c: Added checks for Iff-loading.
	* ilut_win32.c (ilutConvertSliceToHBitmap): Added better error handling.
	* src-IL/src/Makefile.am: Added il_iff.c.
	* ilu_rotate.c (iluRotate_): Changed ilResizeImage call.
	* Added ilut_config.h.
	* ilut.h: Added reference to ilut_config.h for Windows.
	* il_files.c/il_icon.c/il_png.c/il_mng.c: Fixed typecasting warnings.
	* il_jp2.c/il_wbmp.c (ilSaveJp2L/ilSaveWbmpL): Removed const qualifier.
	
2009-01-20 Matěj Týč <bubla@sf.net>
	* test/format_test: Added a program and script as 'make check' target.
	Those  will test whether IL is capable of saving and loading images and whether the saved and
	loaded image is similar to the original.
	* configure.ac, lib/Makefile.am: Added support to IFF compilation.
	* docs/DevIL_manual.texi: Added missing documentation about getting
	image data + fixed some typos.
	* include/IL/devil_cpp_wrapper.hpp: Fixed a typo that caused
	compilation error

2009-01-22 Denton woods <doomwiz@users.sf.net>
	* ilut_internal.h:66: Changed to compile under Cygwin.
	* ilut_opengl.c:108: Replaced _MSC_VER with _WIN32 and _WIN64.
	* il_dds-save.c:343: Fixed bug #1067590 - Removed this line, which caused crashes.
	* il_pic.c (iLoadPicInternal): Fixed ilTexImage call, moved it after channel information read.
	* il_pic.c (readScanline):294-295: Added check for alpha channel.
	* il_pic.c: Added ilSetError calls throughout. 
	* il_sgi.c (iLoadSgiInternal): Fixed bug #1060946 - Removed IL_LUMINANCE_ALPHA filetype.
